--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
 <body>
   <%= render 'partials/header' %>
   <div class="container">
-    <% flash.each do |key,value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
-    <% end %>
+    
+    <!-- Either name partial different than flash variable or use locals as we do here to make sure the partial can use the flash variable without conflict -->
+    <%= render partial: "partials/flash", locals: { flash: flash} %>
+
     <%= yield %>
     <%= render 'partials/footer' %>
     <%= debug(params) if Rails.env.development? %>
