--- a/app/views/partials/_flash.html.erb
+++ b/app/views/partials/_flash.html.erb
@@ -1,3 +1,7 @@
-<% flash.each do |key,value| %>
-  <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
+  <% if flash %>
+    <% flash.each do |key,value| %>
+      <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+      <!-- <div class="alert alert-<%= key %>"><%= value %></div> -->
+    <% end %>
+  <% end %>
+
