--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,25 +3,11 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'partials/error_messages' %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirm Password" %>
-      <%= f.password_field :password_confirmation %>
-
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
-    <% end %>
+    <%= render 'form',  password_message: "Confirm Password",
+                        button_message: "Save changes" %>
 
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+    <%= link_to "change", "http://gravatar.com/emails", target: '_blank' %>
+    <!--  <a href="http://gravatar.com/emails" target="_blank">change</a> -->  
   </div>
 </div>
